# FrostUI

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake  Dependencies.cmake
examples/: CMakeLists.txt
examples/assets/fonts/: README.md
examples/calculator/: main.cpp
examples/demo/: main.cpp
examples/font_showcase/: main.cpp
examples/unit_converter/: main.cpp
include/frost/: frost.hpp
include/frost/core/: math.hpp  result.hpp  signals.hpp  types.hpp
include/frost/graphics/: bitmap_font.hpp  color.hpp  draw_list.hpp  font.hpp  renderer.hpp  software_renderer.hpp
include/frost/graphics/vulkan/: vk_buffer.hpp  vk_context.hpp  vk_pipeline.hpp  vk_renderer.hpp  vk_swapchain.hpp
include/frost/platform/: input.hpp  window.hpp
include/frost/ui/: application.hpp  layout.hpp  widget.hpp
include/frost/ui/widgets/: button.hpp  checkbox.hpp  label.hpp  radio_button.hpp  slider.hpp  text_input.hpp
shaders/: rect.frag  rect.vert
src/core/: math.cpp  signals.cpp
src/graphics/: bitmap_font.cpp  draw_list.cpp  font.cpp  renderer.cpp  software_renderer.cpp
src/graphics/vulkan/: vk_buffer.cpp  vk_context.cpp  vk_pipeline.cpp  vk_renderer.cpp  vk_swapchain.cpp
src/platform/: window_base.cpp
src/platform/linux/: window_x11.cpp
src/platform/win32/: input_win32.cpp  window_win32.cpp
src/ui/: application.cpp  layout.cpp  widget.cpp
src/ui/widgets/: button.cpp  checkbox.cpp  label.cpp  radio_button.cpp  slider.cpp  text_input.cpp
tests/: CMakeLists.txt
tests/core/: test_math.cpp  test_result.cpp  test_signals.cpp
tests/ui/: test_controls.cpp  test_layout.cpp  test_renderer_backend.cpp  test_widget.cpp
